Update videos page and add success stories image
- Fixed YouTube video embedding issues in videos.html
- Added success_stories.jpg to carousel in index.html
- Removed placeholder videos and coming soon sections
- Fixed GSAP animation visibility issues
- Added new images and SEO improvements

--- a/index.html
+++ b/index.html
@@ -2,8 +2,102 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Horticulture Consultancy | Home</title>
+  <title>Horticulture Consultancy | Expert Agricultural Services | HortiConsult</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Expert horticulture consultancy services in India. Specializing in organic farming, hydroponics, terrace gardening, orchard management, and agricultural solutions. Get professional guidance from experienced scientists.">
+  <meta name="keywords" content="horticulture consultancy, organic farming, hydroponics, terrace gardening, orchard management, agricultural consultancy, farming experts, horticulture services, sustainable agriculture, farming solutions">
+  <meta name="author" content="HortiConsult - Horticulture Consultancy Services">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://horticonsult.netlify.app/">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://horticonsult.netlify.app/">
+  <meta property="og:title" content="Horticulture Consultancy | Expert Agricultural Services | HortiConsult">
+  <meta property="og:description" content="Expert horticulture consultancy services in India. Specializing in organic farming, hydroponics, terrace gardening, orchard management, and agricultural solutions.">
+  <meta property="og:image" content="https://horticonsult.netlify.app/organic-farming-vegetables-fruits.jpg">
+  <meta property="og:site_name" content="HortiConsult">
+  <meta property="og:locale" content="en_IN">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://horticonsult.netlify.app/">
+  <meta property="twitter:title" content="Horticulture Consultancy | Expert Agricultural Services | HortiConsult">
+  <meta property="twitter:description" content="Expert horticulture consultancy services in India. Specializing in organic farming, hydroponics, terrace gardening, orchard management, and agricultural solutions.">
+  <meta property="twitter:image" content="https://horticonsult.netlify.app/organic-farming-vegetables-fruits.jpg">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "HortiConsult",
+    "alternateName": "Horticulture Consultancy Services",
+    "url": "https://horticonsult.netlify.app",
+    "logo": "https://horticonsult.netlify.app/organic-farming-vegetables-fruits.jpg",
+    "description": "Expert horticulture consultancy services specializing in organic farming, hydroponics, terrace gardening, and orchard management in India.",
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "IN",
+      "addressRegion": "India"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+91-9902544449",
+      "contactType": "customer service",
+      "areaServed": "IN",
+      "availableLanguage": ["English", "Hindi", "Kannada", "Telugu", "Tamil"]
+    },
+    "sameAs": [
+      "https://youtube.com/@horticonsult"
+    ],
+    "serviceArea": {
+      "@type": "Country",
+      "name": "India"
+    },
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "Horticulture Services",
+      "itemListElement": [
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Organic Farming Consultation",
+            "description": "Expert guidance for organic farming practices and certification"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Hydroponics Setup",
+            "description": "Complete hydroponic system design and implementation"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Terrace Gardening",
+            "description": "Urban gardening solutions for rooftops and small spaces"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Orchard Management",
+            "description": "Professional orchard planning and management services"
+          }
+        }
+      ]
+    }
+  }
+  </script>
   <link href="style.css" rel="stylesheet">
   <!-- Use Bootstrap for styling -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -186,11 +280,20 @@
             <p>From concrete to green oasis in 3 months.</p>
           </div>
               </div>
-        <div class="carousel-item">
+        
+              <div class="carousel-item">
           <img src="images/2.jpg" class="d-block w-100 carousel-img" alt="Success Story 2">
           <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
             <h5>Polyhouse Success</h5>
             <p>Year-round flower production for a local entrepreneur.</p>
+              </div>
+            </div>
+
+            <div class="carousel-item">
+              <img src="images/success_stories.jpg" class="d-block w-100 carousel-img" alt="Success Story 3">
+              <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
+                <h5>Success Stories</h5>
+                <p>Success stories of our clients.</p>
               </div>
             </div>
         <div class="carousel-item">
