--- a/services.html
+++ b/services.html
@@ -144,7 +144,7 @@ const services = [
     title: "Terrace gardening ",
     short: "Turn your rooftop into a fresh green garden for vegetables and fruits..",
     details: "Why you need us: Without proper setup, terrace gardens fail quickly. Our expert guidance ensures healthy plants, better yields, and long-lasting rooftop gardens.",
-    image: "images/terrace1.jpg",
+    image: "images/terraceGardening  .jpg ",
     moreInfo: [
       "Why terrace grading?",
       "Tips to set up",
@@ -164,7 +164,7 @@ const services = [
     short: "Grow more in less space with modern vertical garden systems.",
     details: "Vertical gardening requires technical know-how for stability, water, and nutrient management. Our solutions make your walls and balconies thrive with greenery.",
     icon: "flask-round",
-    image: "images/vartical.jpg",
+    image: "images/vf.jpg",
     moreInfo: [
       "\tHow to setup VG both for Home and Commercial",
       "\tTypes of VG ,Media types ",
@@ -197,7 +197,7 @@ const services = [
     title: "Polyhouse Flower Cultivation",
     short: "Protected farming for higher yield and year-round crops.",
     details: "polyhouse farming needs expert management of climate, pests, and water. Our knowledge helps you avoid losses and achieve consistent profits.",
-    image: "images/Polyhouse-Rose-Cultivation.jpg",
+    image: "images/polyhouse.jpg",
     moreInfo: [
       "setting up of natural and fan and pad system of polyhouses. Including project preparation for bank loans.",
       "Completely automated system for fertigation, PH and EC for entire crop cycle.",
@@ -230,7 +230,7 @@ const services = [
     short: "Eco-friendly solutions for healthy crops.",
     details: "Wrong pesticide use harms crops, soil, and health. Our expert advice ensures effective control while protecting the environment.",
     icon: "bug",
-    image: "images/Pest & Disease Control Advisory2.jpg",
+    image: "images/Pest .jpg",
     moreInfo: [
     "Pest and devices controls for existing orchards trough organic and inorganic methods .",
     "Safe food production  trough biological control .",
@@ -243,7 +243,7 @@ const services = [
     title: "vegetables and flowers production.",
     short: "Scientific help to grow fresh vegetables and flowers.",
     details: "Why you need us: Choosing the wrong seeds or practices reduces yield. Our expertise ensures successful production with better quality and profits.",
-    image: "images/vegandfruits.jpg",
+    image: "images/Vegetable and flower production.jpg",
     moreInfo: [
     "Production of different vegetables like :- ",
             "tomato" ," capsicum "," chillis "," gourds "," beans "," ladyfinger ","carrots ","cabbage and broccoli ","and all types of leafy vegetables both imagining and organic way .", 
@@ -286,7 +286,7 @@ const services = [
     short: "Scientific testing of new farm products in real fields.",
     details: "Without scientific testing, farmers risk using unsafe or ineffective products. Our trials provide trustworthy data before use.",
     icon: "test-tube",
-    image: "images/biotesting.jpg",
+    image: "images/Testing.jpg",
     moreInfo: [
     "Designing and implementing field trials as per ICAR / CIB & RC / OECD guidelines.",
     "Testing under real farming conditions across multiple locations and crops.",
