Add chrysanthemum success story to carousel
- Added lightd.jpg image to success stories carousel
- Title: Chrysanthemum under lights
- Description: Advanced lighting techniques for optimal flower growth and quality
- Added as 6th carousel item in index.html

--- a/index.html
+++ b/index.html
@@ -310,6 +310,13 @@
             <p>Neighbors collaborating to grow healthy food together.</p>
           </div>
         </div>
+        <div class="carousel-item">
+          <img src="images/lightd.jpg" class="d-block w-100 carousel-img" alt="Chrysanthemum under lights">
+          <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
+            <h5>Chrysanthemum under lights</h5>
+            <p>Advanced lighting techniques for optimal flower growth and quality.</p>
+          </div>
+        </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#successCarousel" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
