--- a/about.html
+++ b/about.html
@@ -781,7 +781,7 @@
       <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
         <div class="team-member-card" data-bs-toggle="modal" data-bs-target="#teamModal7">
           <div class="member-photo-container">
-            <img src="images/NAVEEN.jpg" alt="Mr. Naveen" class="member-photo">
+            <img src="images/naveen.jpg" alt="Mr. Naveen" class="member-photo">
             <div class="member-overlay">
               <span class="view-profile">View Profile</span>
             </div>
@@ -1191,10 +1191,10 @@ He specializes in developing <b>high-yielding, disease-resistant seed varieties,
                      <img src="images/bharath.jpg" class="d-block w-100 team-photo-carousel" alt="Mr. Bharath - Professional Photo">
                    </div>
                    <div class="carousel-item">
-                     <img src="https:" class="d-block w-100 team-photo-carousel" alt="Mr. Bharath - Hydroponic Systems">
+                     <img src="images/b1.jpg" class="d-block w-100 team-photo-carousel" alt="Mr. Bharath - Hydroponic Systems">
                    </div>
                    <div class="carousel-item">
-                     <img src="https:" class="d-block w-100 team-photo-carousel" alt="Mr. Bharath - Urban Farming">
+                     <img src="images/b2.jpg" class="d-block w-100 team-photo-carousel" alt="Mr. Bharath - Urban Farming">
                    </div>
                  </div>
                  <button class="carousel-control-prev" type="button" data-bs-target="#carousel5" data-bs-slide="prev">
@@ -1324,7 +1324,7 @@ He specializes in developing <b>high-yielding, disease-resistant seed varieties,
                  </div>
                  <div class="carousel-inner">
                    <div class="carousel-item active">
-                     <img src="images/NAVEEN.jpg" class="d-block w-100 team-photo-carousel" alt="Mr. Naveen - Professional Photo">
+                     <img src="images/naveen.jpg" class="d-block w-100 team-photo-carousel" alt="Mr. Naveen - Professional Photo">
                    </div>
                    <div class="carousel-item">
                      <img src="https:" class="d-block w-100 team-photo-carousel" alt="Mr. Naveen - Landscape Design">
