Replace Mr. Bharath's photo with new filename to bypass cache
- Created bharath_new.jpg with updated professional photo
- Updated all references in about.html to use new filename
- Completely bypasses browser and CDN caching issues
- Ensures fresh image loads on website

--- a/about.html
+++ b/about.html
@@ -737,7 +737,7 @@
       <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
         <div class="team-member-card" data-bs-toggle="modal" data-bs-target="#teamModal5">
           <div class="member-photo-container">
-            <img src="images/bharath.jpg?v=2" alt="Mr. Bharath" class="member-photo">
+            <img src="images/bharath_new.jpg" alt="Mr. Bharath" class="member-photo">
             <div class="member-overlay">
               <span class="view-profile">View Profile</span>
             </div>
@@ -1188,7 +1188,7 @@ He specializes in developing <b>high-yielding, disease-resistant seed varieties,
                  </div>
                  <div class="carousel-inner">
                    <div class="carousel-item active">
-                     <img src="images/bharath.jpg?v=2" class="d-block w-100 team-photo-carousel" alt="Mr. Bharath - Professional Photo">
+                     <img src="images/bharath_new.jpg" class="d-block w-100 team-photo-carousel" alt="Mr. Bharath - Professional Photo">
                    </div>
                    <div class="carousel-item">
                      <img src="images/b1.jpg" class="d-block w-100 team-photo-carousel" alt="Mr. Bharath - Hydroponic Systems">
